# crowdin-helper

./: .gitignore  README.md  pyproject.toml
src/crowdin_helper/: __main__.py  ai.py  config.py  crowdin.py  log.py
tests/: translater_test.py
